unpackaged/main/default/objects/PF_Billing_Group_Mapping__c/PF_Billing_Group_Mapping__c.object-meta.xml
<CustomObject>
    <label>Billing Group Mapping</label>
    <nameField>
        <displayFormat>BGM-{000000}</displayFormat>
        <label>Billing Group Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Group Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>