unpackaged/main/default/objects/PF_Billing_Group_Mapping__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Group Mappings</relationshipLabel>
    <relationshipName>Billing_Group_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>