unpackaged/main/default/objects/PF_Billing_Group_Mapping__c/fields/Autres_prestations__c.field-meta.xml
<CustomField>
    <fullName>Autres_prestations__c</fullName>
    <label>Autres prestations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Group_Type</valueSetName>
    </valueSet>
</CustomField>