unpackaged/main/default/objects/PF_Billing_Group_Mapping__c/fields/Divers_Hors_Location__c.field-meta.xml
<CustomField>
    <fullName>Divers_Hors_Location__c</fullName>
    <label>Divers Hors Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Group_Type</valueSetName>
    </valueSet>
</CustomField>