unpackaged/main/default/objects/PF_Billing_Group_Mapping__c/fields/Lavage__c.field-meta.xml
<CustomField>
    <fullName>Lavage__c</fullName>
    <label>Lavage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Group_Type</valueSetName>
    </valueSet>
</CustomField>