unpackaged/main/default/objects/PF_Billing_Group_Mapping__c/fields/Remise_en_etat__c.field-meta.xml
<CustomField>
    <fullName>Remise_en_etat__c</fullName>
    <label>Remise en état</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Group_Type</valueSetName>
    </valueSet>
</CustomField>