unpackaged/main/default/objects/PF_Billing_Group_Mapping__c/fields/Transport__c.field-meta.xml
<CustomField>
    <fullName>Transport__c</fullName>
    <label>Transport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Group_Type</valueSetName>
    </valueSet>
</CustomField>