unpackaged/main/default/objects/PF_Billing_Group_Mapping__c/fields/VenteMaindOeuvre__c.field-meta.xml
<CustomField>
    <fullName>VenteMaindOeuvre__c</fullName>
    <label>Vente Main d&#39;Oeuvre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Group_Type</valueSetName>
    </valueSet>
</CustomField>